<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundmain"
        android:alpha="0.6" />

    <TextView
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#4444ff"

        android:paddingLeft="120dp"
        android:paddingTop="35dp"
        android:text="@string/Heading"
        android:textSize="35sp"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/MainLogo"
        android:background="@drawable/mainlogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/WelcomeHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MainLogo"
        android:background="#55FFFFFF"

        android:layout_margin="10dp"

        android:text="@string/Welcome"
        android:textSize="20sp"
        android:textColor="#000000" />

    <Button
        android:id="@+id/HireWelcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/WelcomeHeader"
        android:text="@string/HireWelcome"

        android:layout_marginRight="210dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"

        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="#F8650D" />

    <Button
        android:id="@+id/WorkWelcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/WelcomeHeader"
        android:text="@string/WorkWelcome"


        android:layout_marginRight="50dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"

        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:background="#F8650D" />

    <Button
        android:id="@+id/LogOutWelcome"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/LogoutBtn"

        android:layout_below="@id/WorkWelcome"
        android:layout_marginTop="10dp"

        android:textSize="20sp"
        android:textColor="#FFFFFF"

        android:background="#F8650D"
        android:layout_centerHorizontal="true" />

    <!--<Spinner-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/categories_spinner"-->
        <!--android:layout_below="@+id/LogOutWelcome"-->
        <!--android:textAlignment="center"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="94dp" />-->

</RelativeLayout>