<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aka.campuslancer.forgetpassword">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundmain"
        android:alpha="0.6"/>

    <TextView
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:background="#4444ff"

        android:paddingLeft="120dip"
        android:paddingTop="35dip"
        android:text="@string/Heading"
        android:textSize="35sp"
        android:textColor="#FFFFFF"/>

    <ImageView
        android:id="@+id/MainLogo"
        android:background="@drawable/mainlogo"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"/>

    <TextView
        android:id="@+id/ForgotPasswordPrompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MainLogo"
        android:background="#55FFFFFF"

        android:layout_margin="10dp"

        android:text="@string/ForgotPassword"
        android:textSize="20sp"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:background="#DDDDDD"
        android:padding="5sp"
        android:textSize="22sp"

        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_below="@id/ForgotPasswordPrompt"
        android:hint="Enter the email address"/>

    <Button
        android:id="@+id/reset_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:text="@string/ResetPassword"

        android:layout_centerHorizontal="true"
        android:padding="3sp"
        android:layout_marginTop="5dip"

        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="#F8650D" />

</RelativeLayout>
