<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aka.campuslancer.HireStarted">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundmain"
        android:alpha="0.6" />

    <TextView
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="#4444FF"

        android:paddingLeft="100dip"
        android:paddingTop="25dip"
        android:text="@string/Heading"
        android:textSize="25sp"
        android:textColor="#FFFFFF"/>

    <ImageView
        android:id="@+id/MainLogo"
        android:background="@drawable/mainlogo"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"/>

    <TextView
        android:id="@+id/WorkGetStarted"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MainLogo"
        android:background="#55FFFFFF"

        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"

        android:text="@string/WorkGetStarted"
        android:textSize="22sp"
        android:textColor="#222222" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/WorkNewProjects"
        android:layout_width="match_parent"
        android:layout_height="280dip"
        android:layout_below="@id/WorkGetStarted"
        android:layout_marginBottom="10dip"
        android:orientation="horizontal"

        tools:context="com.aka.campuslancer.HireStarted">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical"

            tools:context="com.aka.campuslancer.HireStarted">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.7"
                android:layout_margin="5dip"
                android:src="@drawable/projects" />

            <TextView
                android:id="@+id/WorkText1"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.4"
                android:background="#55FFFFFF"

                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"

                android:text="@string/WorkText1"
                android:textSize="18sp"
                android:textColor="#222222" />

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical"

            tools:context="com.aka.campuslancer.HireStarted">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.7"
                android:layout_margin="5dip"
                android:src="@drawable/apply" />

            <TextView
                android:id="@+id/WorkText2"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.4"
                android:background="#55FFFFFF"

                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"

                android:text="@string/WorkText2"
                android:textSize="18sp"
                android:textColor="#222222" />

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:orientation="vertical"

            tools:context="com.aka.campuslancer.HireStarted">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.7"
                android:layout_margin="5dip"
                android:src="@drawable/money" />

            <TextView
                android:id="@+id/WorkText3"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.4"
                android:background="#55FFFFFF"

                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"

                android:text="@string/WorkText3"
                android:textSize="18sp"
                android:textColor="#222222" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/WorkNewProjects"
        android:background="#55FFFFFF"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SelectCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/HireNewProjects"

            android:layout_margin="5dp"

            android:text="@string/SelectCategory"
            android:textSize="16sp"
            android:textColor="#222222"
            />

        <Spinner
            android:id="@+id/categories_spinner"
            android:layout_width="220dip"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <Button
        android:id="@+id/browseProjectsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/WorkNewProjects"
        android:layout_toRightOf="@id/Category"

        android:layout_marginTop="25dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"

        android:text="@string/BrowseProjects"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="#F8650D" />

</RelativeLayout>
